Partially integrated efficient fronteir code.

--- a/python/src/Project3PortfolioBuilderSmartContract_ABI.json
+++ b/python/src/Project3PortfolioBuilderSmartContract_ABI.json
@@ -58,7 +58,7 @@
 						"type": "uint256"
 					}
 				],
-				"internalType": "struct project3.Portfolio",
+				"internalType": "struct Project3PortfolioBuilderSmartContract.Portfolio",
 				"name": "portfolio",
 				"type": "tuple"
 			}
